samples/_failures_safe/1761499990_ee4a4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5fc7dafe.c: In function ‘main’:
./samples/SAFE/__tmp_5fc7dafe.c:162:5: error: expected expression at end of input
  162 |     print_compression_stats(&
      |     ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5fc7dafe.c:162:5: error: expected declaration or statement at end of input
